      "README" about licensing per the request of the 
      http://directory.fsf.org/ maintainers. (SHLOMIF)
    - Added a "right margin" option which will show a line at the specified
      column (BRICAS)
    - Now new files belong to the project from where they were created till
      they are saved (GABRIELMAD)
    - Directory Tree shows the project directory or if none file is opened
      the user's home documents directory (GABRIELMAD)
    - Install some of the examples in the share directory and add an
      Open Example menu option (SZABGAB)
    - Adding Padre::Wx->add_pane_info convenience method to prevent the need
      for the stupid ugly Wx::AuiPaneInfo method chaining (ADAMK)
    - Create the Left panel and moved the Directory tool into it (ADAMK)
    - Upgrade Wx tree navigation to handle detached floating panels (ADAMK)
    - Implemented Smart Highlighting. Double click on a word to select it
      and a green squiggle will be shown for each matching word (AZAWAWI)
    - Now users can choose which is the project directory that Directory
      Tree must show (GABRIELMAD)
    - Moved close operations into Close... submenu (ADAMK)
    - Added "Close This Project" to close all open files in the same project
      as the current file (ADAMK)
    - Added "Close Other Projects" to close all open files in projects other
      than the project of the current file (ADAMK)
    - Changed a bunch of documentation from using items or comma-separation
      to using =head3 pod entries (ADAMK)

0.41 2009.07.23
    - Remove Experimental mode.
    - Fixed a bug in Plugin config_write where ->selectrow_array was used 
      instead of ->do to SQL update (Thanks to tlbdk++). (AZAWAWI)
    - run_command in a separate window now works in win32 to support 
      prompt('...') in Perl 6 and <STDIN> in Perl 5. (AZAWAWI)
    - Now Padre can find/replace inside selections (GARU)
    - New Syntax highlighter configuration system. Plugins now can add more