@@ -63,7 +63,7 @@ sub new {
 	Wx::Event::EVT_SET_FOCUS(
 		$self,
 		sub {
-			$_[0]->refresh;
+			$_[0]->parent->refresh;
 		},
 	);
 
